# tron_service_test_task

./: Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
docker/backend/: .env.local
src/: _settings.py  constants.py  rest_main.py
src/api/endpoints_v1/: __init__.py  wallets.py
src/database/migrations/versions/: 2025_01_22_2331-271fbc31cf7d_init_database_tables.py
src/database/models/: __init__.py  _universal_type_annotations.py  models.py
src/database/repositories/: absctract_repository.py  abstract_manager.py  manager.py  wallet_query_repository.py
src/schemas/payload/: wallet.py
src/schemas/response/: base.py  wallet.py
src/services/create_wallet_query_service/: abc_service.py  facade.py
src/services/get_wallet_info_service/: abc_service.py  tron.py
src/services/get_wallet_queries_service/: abc_service.py  repository.py
src/services/save_wallet_query_service/: abc_service.py  repository.py
src/services/tron_service/: tron_factory.py
system/: entrypoint.sh
tests/: conftest.py  test_endpoints.py
tests/fixtures/: core.py
