[tool.poetry]
name = "tron-service-test-task"
version = "0.1.0"
description = ""
authors = ["QdMiracle <qdmiracle21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
loguru = "^0.7.3"
tronpy = "^0.5.0"
pydantic = "^2.10.5"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "W",    # Warning
#    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "EXE",  # flake8-executable,
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "T20",  # flake8-print
#    "PT",   # flake8-pytest-style
#    "RSE",  # flake8-raise
#    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
#    "ARG",  # flake8-unused-arguments
    "PGH",  # pygrep-hooks
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Errors

    # ** Things to potentially enable in the future **
    # DTZ requires all usage of datetime module to have timezone-aware
    # objects (so have a tz argument or be explicitly UTC).
#     "DTZ",  # flake8-datetimez
#     "PTH",  # flake8-use-pathlib
#     "SIM",  # flake8-simplify
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D105",
    "D106",
    "D200",
    "D400",
    "D413",
    "E501",
    "E402",
    "E731",
    "F821",
    "N815",
    "N805",
    "W291",
    "EXE002",
    "RUF012",
    "PGH003",
    "A003",
    "ARG002",
    "RET504",
    "RET502",
    "RET505",
    "G004",
    "RUF100",
]
